[gd_scene load_steps=6 format=3 uid="uid://bo5i0vmve366w"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_m8kng"]
[ext_resource type="PackedScene" uid="uid://b4hgis3fu0l50" path="res://Scenes/testing.tscn" id="2_ah3l3"]
[ext_resource type="Theme" uid="uid://0l0pdo16thjx" path="res://menu.tres" id="3_r5xw6"]
[ext_resource type="AudioStream" uid="uid://cnvr68jbtktx1" path="res://SFX/menuloop.wav" id="4_a5qhb"]

[sub_resource type="Theme" id="Theme_yhlfk"]
Button/styles/normal = null

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_m8kng")
test_scene = ExtResource("2_ah3l3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_r5xw6")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 300
theme_override_font_sizes/italics_font_size = 300
theme_override_font_sizes/bold_italics_font_size = 300
theme_override_font_sizes/mono_font_size = 300
bbcode_enabled = true
text = "[wave amp=60.0 freq=2.0 connected=1]A Momentous Occasion"
fit_content = true
autowrap_mode = 0

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yhlfk")
theme_override_font_sizes/font_size = 100
disabled = true
text = "Play"

[node name="Testing" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Testing"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="QuitToDesktop" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Quit to Desktop"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_a5qhb")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Testing" to="." method="_on_testing_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitToDesktop" to="." method="_on_quit_to_desktop_pressed"]
